--- a/main_site/templates/home_page.html
+++ b/main_site/templates/home_page.html
@@ -101,7 +101,16 @@
             {% for mc in mcs %}
                 <div class="col-6 col-md-3">
                     <div class="text-center border" style="background: #ffffffec; min-height: 400px; border-radius: 8px; margin-bottom: 25px;">
-                        <img src="{% static mc.photo %}" alt="{{ mc.title }}" width="200px" height="250px" style="overflow: hidden; margin-top: 15px;">
+                        <div class="text-center align-content-center" style="height: 250px; width: 100%; overflow: hidden; padding: 10px;">
+                            <div class="" style="width: 95%;
+                                                height: 240px;
+                                                margin:0 auto;
+                                                background:url({% static mc.photo %}) white no-repeat center center;
+                                                background-size:240px;
+                                                display: block;">
+
+                            </div>
+                        </div>
                         <h4 style="padding-top: 5px;"><a href="{% url 'article' mc.id %}" style=" overflow: hidden;
                             text-overflow: ellipsis;
                             display: -webkit-box;
