--- a/main_site/templates/account/register.html
+++ b/main_site/templates/account/register.html
@@ -7,8 +7,8 @@
 {% block content %}
 <div class="container text-center">
     <div class="row" style="min-height: 400px;">
-        <div class="col-12 col-md-4"></div>
-        <div class="col-12 col-md-4" style="margin-top: 0px;">
+        <div class="col-12 col-md-3"></div>
+        <div class="col-12 col-md-6" style="margin-top: 0px;">
             <form action="{% url 'auth_sign' %}" class="form-signin">
               <h1 class="h3 mb-3 font-weight-normal text-left" style="padding-top: 40px;">Регистрация</h1>
                 <label for="first_name">Имя</label>
@@ -17,15 +17,28 @@
                 <label for="last_name">Фамилия</label>
                 <input name="last_name" type="text" id="last_name" class="form-control" placeholder="Фамилия" required=""
                        autofocus="">
+                <hr>
+                <div class="row">
+                    <div class="col-6"><label for="phone_number">Номер телефона</label>
+                <input name="phone_number" type="text" id="phone_number" class="form-control" placeholder="380677074027" required=""
+                       autofocus=""></div>
+                    <div class="col-6"><br><button class="btn btn-success">Подтвердить</button></div>
+                </div>
+
+                <label for="phone_number_code">Код подтверждения(последние 4 цифры звонящего номера)</label>
+                <input name="phone_number_code" type="text" id="phone_number_code" class="form-control" placeholder="1234" required=""
+                       autofocus="">
+                <hr>
                 <label for="forum_nickname">Логин на форуме</label>
                 <input name="forum_nickname" type="text" id="forum_nickname" class="form-control" placeholder="Ник на форуме" required=""
                        autofocus="">
-                <label for="username">Логин</label>
+                <label for="username">Логин для входа</label>
                 <input name="username" type="text" id="username" class="form-control" placeholder="Логин" required=""
                        autofocus="">
                 <label for="inputEmail">Почта</label>
                 <input name="inputEmail" type="text" id="inputEmail" class="form-control" placeholder="Почта" required=""
                        autofocus="">
+                <hr>
                 <label for="inputPassword">Пароль</label>
                 <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Пароль" required="">
 
@@ -34,8 +47,12 @@
                 <br>
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Вход</button>
             </form>
+            <br>
+            <hr>
+            <br>
+
         </div>
-        <div class="col-12 col-md-4"></div>
+        <div class="col-12 col-md-3"></div>
     </div>
 </div>
 {% endblock %}
