--- a/main_site/templates/home_page.html
+++ b/main_site/templates/home_page.html
@@ -51,11 +51,7 @@
             {% for shop in shops %}
                 <div class="col-12 col-md-3">
                     <div class="text-center border-left" style="background: #fffffffb; height: 300px; border-radius: 8px; margin-bottom: 25px;">
-                        <p style="font-size: 30px; padding: 15px 0;"><a href="#" style=" overflow: hidden;
-                                       text-overflow: ellipsis;
-                                       display: -webkit-box;
-                                       -webkit-line-clamp: 1; /* number of lines to show */
-                                       -webkit-box-orient: vertical;">{{ shop.name }}</a></p>
+                        <p style="font-size: 30px; padding: 15px 0;">{{ shop.name }}</p>
                         <p style="height: 100px;">{{ shop.description }}</p>
                         <p style="height: 20px;">Рейтинг: {{ shop.rating }}</p>
                         <hr>
@@ -77,11 +73,7 @@
                         <div style="height: 230px; margin-top: 15px;">
                             <img src="{% static product.photo_filename.url %}" alt="{{ product.description }}" height="230px" width="230px">
                         </div>
-                        <p style="font-size: 30px; padding: 10px 0;"><a href="#" style=" overflow: hidden;
-                            text-overflow: ellipsis;
-                            display: -webkit-box;
-                            -webkit-line-clamp: 2; /* number of lines to show */
-                            -webkit-box-orient: vertical;">{{ product.name }}</a></p>
+                        <p style="font-size: 30px; padding: 10px 0;">{{ product.name }}</p>
                         <div style="height: 77px;">
                             <p style="overflow: hidden;
                                    text-overflow: ellipsis;
