--- a/creative_blog/templates/all_creative_blogs.html
+++ b/creative_blog/templates/all_creative_blogs.html
@@ -38,6 +38,7 @@
                 </div>
             </div>
             {% endfor %}
+            {% include "pagination/pagination.html" with page=articles %}
         </div>
     </div>
 {% endblock %}
