--- a/main_site/templates/base_template.html
+++ b/main_site/templates/base_template.html
@@ -55,10 +55,10 @@
               <a class="nav-link" style="color: gray; font-size: 20px;" href="{% url 'all_shops' %}">Магазины</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" style="color: gray; font-size: 20px;" href="#">Пользователи</a>
+              <a class="nav-link" style="color: gray; font-size: 20px;" href="{% url 'all_users_page' %}">Пользователи</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" style="color: gray; font-size: 20px;" href="#">Помощь</a>
+                <a class="nav-link" style="color: gray; font-size: 20px;" href="{% url 'help_page' %}">Помощь</a>
               </li>
           </ul>
         </div>
