--- a/main_site/templates/account/register.html
+++ b/main_site/templates/account/register.html
@@ -5,12 +5,13 @@
 {% endblock %}
 
 {% block content %}
-<div class="container text-center">
+<div class="container text-center" id="registration_app" ng-app="MyApplication" ng-controller="RegController">
     <div class="row" style="min-height: 400px;">
         <div class="col-12 col-md-3"></div>
         <div class="col-12 col-md-6" style="margin-top: 0px;">
-            <form action="{% url 'auth_sign' %}" class="form-signin">
-              <h1 class="h3 mb-3 font-weight-normal text-left" style="padding-top: 40px;">Регистрация</h1>
+            <form action="{% url 'auth_register' %}" method="post" class="form-signin">
+                {% csrf_token %}
+                <h1 class="h3 mb-3 font-weight-normal text-left" style="padding-top: 40px;">Регистрация</h1>
                 <label for="first_name">Имя</label>
                 <input name="first_name" type="text" id="first_name" class="form-control" placeholder="Имя" required=""
                        autofocus="">
@@ -20,13 +21,13 @@
                 <hr>
                 <div class="row">
                     <div class="col-6"><label for="phone_number">Номер телефона</label>
-                <input name="phone_number" type="text" id="phone_number" class="form-control" placeholder="380677074027" required=""
+                <input ng-model="phone_number" name="phone_number" type="text" id="phone_number" class="form-control" placeholder="380677074027" required=""
                        autofocus=""></div>
-                    <div class="col-6"><br><button class="btn btn-success">Подтвердить</button></div>
+                    <div class="col-6"><br><div class="btn btn-success" ng-click="send_call_request()">Позвонить</div></div>
                 </div>
 
                 <label for="phone_number_code">Код подтверждения(последние 4 цифры звонящего номера)</label>
-                <input name="phone_number_code" type="text" id="phone_number_code" class="form-control" placeholder="1234" required=""
+                <input ng-model="phone_number_code" ng-change="check_number_code()" name="phone_number_code" type="text" id="phone_number_code" class="form-control" placeholder="1234" required=""
                        autofocus="">
                 <hr>
                 <label for="forum_nickname">Логин на форуме</label>
@@ -35,17 +36,18 @@
                 <label for="username">Логин для входа</label>
                 <input name="username" type="text" id="username" class="form-control" placeholder="Логин" required=""
                        autofocus="">
-                <label for="inputEmail">Почта</label>
-                <input name="inputEmail" type="text" id="inputEmail" class="form-control" placeholder="Почта" required=""
+                <label for="email">Почта</label>
+                <input name="email" type="email" id="email" class="form-control" placeholder="Почта" required=""
                        autofocus="">
                 <hr>
                 <label for="inputPassword">Пароль</label>
-                <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Пароль" required="">
+                <input ng-model="password" ng-change="check_passwords()" name="password" type="password" id="inputPassword" class="form-control" placeholder="Пароль" required="">
 
                 <label for="confirm_password">Подтверждение пароля</label>
                 <input name="confirm_password" type="password" id="confirm_password" class="form-control" placeholder="Подтверждение пароля" required="">
                 <br>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Вход</button>
+                <button ng-if="phone_confirmed && password_confirmed" class="btn btn-lg btn-primary btn-block" type="submit">Зарегистрировать</button>
+                <div ng-else class="btn btn-lg btn-primary btn-block" ng-click="show_code_error()">Зарегистрировать</div>
             </form>
             <br>
             <hr>
@@ -58,6 +60,7 @@
 {% endblock %}
 
 {% block scripts %}
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script>
         let MyApplication = angular.module('MyApplication',[]);
 
@@ -66,26 +69,61 @@
             $interpolateProvider.endSymbol('}#');
         }]);
 
-        MyApplication.controller('UserProfileController', ['$scope', 'requestService', function($scope, requestService) {
-            $scope.auth_content = {};
-            $scope.auth_type = [];
+        MyApplication.config(['$httpProvider', function($httpProvider) {
+            $httpProvider.defaults.xsrfCookieName = 'csrftoken';
+            $httpProvider.defaults.xsrfHeaderName = 'X-CSRFToken';
+        }]);
 
-            $scope.change_active_tab = function(tab) {
-                $scope.active_tab = tab;
+        MyApplication.controller('RegController', ['$scope', 'requestService', function($scope, requestService) {
+            $scope.register = {};
+
+            $scope.phone_number = '';
+            $scope.phone_number_confirm_code = 0;
+            $scope.phone_number_code = '';
+            $scope.phone_confirmed = 0;
+
+            $scope.password = '';
+            $scope.confim_password = '';
+            $scope.password_confirmed = 0;
+
+
+            $scope.check_passwords = function(){
+                if ($scope.password === $scope.confim_password) {
+                    $scope.password_confirmed = 1;
+                } else {
+                    $scope.password_confirmed = 0;
+                }
             }
 
-            $scope.load_profile = function() {
-                requestService.load_profile()
+
+            $scope.show_code_error = function() {
+                if (!$scope.phone_confirmed){
+                    Swal.fire('Неправильный код подтверждения')
+                }
+                if (!$scope.password_confirmed){
+                    Swal.fire('Пароли не совпадают')
+                }
+            }
+
+            $scope.check_number_code = function() {
+                if ($scope.phone_number_code === $scope.phone_number_confirm_code) {
+                    $scope.phone_confirmed = 1;
+                } else {
+                    $scope.phone_confirmed = 0;
+                }
+            }
+
+            $scope.send_call_request = function() {
+                requestService.send_call_request({'phone_number': $scope.phone_number})
                 .then(function(resp) {
                     if (resp.status === 'success') {
-                        $scope.profile_content = resp.detail;
+                        $scope.phone_number_confirm_code = resp.detail;
                     } else {
 
                     }
                 });
             }
 
-            $scope.load_profile()
 
             $scope.change_password_form_submit = function (data) {
                 if (!data.old_password || !data.new_password || !data.confirm_new_password) {
@@ -116,7 +154,7 @@
 
         MyApplication.factory('requestService', ['$http',  function($http, $q) {
         return {
-            load_profile: load_profile,
+            send_call_request: send_call_request,
             change_password: change_password,
         };
 
@@ -130,10 +168,11 @@
             return request.then(handleSuccess, handleError);
         }
 
-        function load_profile() {
+        function send_call_request(data) {
             var request = $http({
-                method: 'get',
-                url: '/load_profile/'
+                method: 'post',
+                data: JSON.stringify(data),
+                url: '{% url 'check_number' %}'
             });
             return request.then(handleSuccess, handleError);
         }
@@ -151,5 +190,6 @@
         }
 
     }]);
+    angular.bootstrap(document.getElementById("registration_app"), ['MyApplication']);
     </script>
 {% endblock %}
