--- a/creative_blog/templates/blog.html
+++ b/creative_blog/templates/blog.html
@@ -8,7 +8,7 @@
     <div class="container" style="width:800px">
         <div class="row" style="margin: 30px 0;">
             <div class="col-12 col-md-4">
-                <img src="https://banner2.cleanpng.com/20180401/kve/kisspng-user-profile-computer-icons-male-id-5ac19772b4d884.3909818215226366587408.jpg" alt="Юзер лого" style="height: 25vh; width: 25vh;">
+                <img src="{{ user.image_url }}" alt="Юзер лого" style="height: 25vh; width: 25vh;">
             </div>
             <div class="col-12 col-md-8">
                 <p>Автор блога:</p>
