--- a/creative_shop/templates/shop_shop.html
+++ b/creative_shop/templates/shop_shop.html
@@ -25,7 +25,7 @@
             <p class="text-center">{{ shop.description }}</p>
         </div>
         <div class="col-12 col-md-2">
-            <img src="https://banner2.cleanpng.com/20180401/kve/kisspng-user-profile-computer-icons-male-id-5ac19772b4d884.3909818215226366587408.jpg" alt="Фото пользователя" class="col-12">
+            <img src="{% static shop.owner.photo.url %}" alt="Фото пользователя" class="col-12">
             <a href="{% url 'blog' shop.owner.id %}" class="col-12">{{ shop.owner.first_name }} {{ shop.owner.last_name }}</a>
         </div>
     </div>
