--- a/main_site/templates/home_page.html
+++ b/main_site/templates/home_page.html
@@ -123,7 +123,7 @@
                 </div>
             {% endfor %}
         </div>
-        <div class="text-center" style="padding-bottom: 40px;"><a href="#" class="btn btn-danger">Все мастер-классы</a></div>
+        <div class="text-center" style="padding-bottom: 40px;"><a href="{% url 'all_blogs' %}" class="btn btn-danger">Все мастер-классы</a></div>
     </div>
 </div>
 <div style="min-height: 650px;">
